--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <p>This is a test!<p/>
-  <body/>
-<html/>
+
+    <head>
+        <title>Hero's Domain!</title>
+    </head>
+
+    <body>
+        <h1>About me!</h1>
+        <p>Hi! My name is Mikey, and I'm a software engineering student! I hope to eventually turn this site into a shrine dedicated to Dragon Quest 1-4 in the future.</p>
+        
+        <h2>Some things I like:</h2>
+
+        <ul>
+            <li>Baking bread</li>
+            <li>Cute girl(s)</li>
+            <li>Sauce</li>
+            <li>A little pee</li>
+        </ul>
+
+        <ol>
+            <li><a href='http://www.nethack.org'>A little pee</a></li>
+            <li>Oh goodness</li>
+            <li>Sauce</li>
+            <li>Jalapenos</li>
+        </ol>
+
+        <h3>Things you didn't know about me:</h3>
+        <p>mf, I can unicycle!</p>
+
+    </body>
+
+</html>
