--- a/index.html
+++ b/index.html
@@ -15,18 +15,14 @@
             <li>Baking bread</li>
             <li>Cute girl(s)</li>
             <li>Sauce</li>
-            <li>A little pee</li>
         </ul>
 
         <ol>
-            <li><a href='http://www.nethack.org'>A little pee</a></li>
-            <li>Oh goodness</li>
-            <li>Sauce</li>
-            <li>Jalapenos</li>
+            <li><a href='https://media.istockphoto.com/id/480526591/photo/collared-peccary.jpg?s=612x612&w=0&k=20&c=N7kn8d8DymaT7KeZG5lTqzuXdDWsHSV5R3UG3pUMjIg='>Don't click this link!</a></li>
         </ol>
 
         <h3>Things you didn't know about me:</h3>
-        <p>mf, I can unicycle!</p>
+        <p>I can unicycle!</p>
 
     </body>
 
