--- a/index.html
+++ b/index.html
@@ -3,22 +3,30 @@
 
     <head>
         <title>Hero's Domain!</title>
+        <style>
+            body {
+               background-color: rgb(251, 254, 64);
+            }
+            h1{
+               color: cyan;
+            }
+         </style>
     </head>
 
     <body>
         <h1>About me!</h1>
-        <p>Hi! My name is Mikey, and I'm a software engineering student! I hope to eventually turn this site into a shrine dedicated to Dragon Quest 1-4 in the future.</p>
+        <p>Hi! My name is Mikey, and I'm a software engineering student!</p>
         
         <h2>Some things I like:</h2>
 
         <ul>
             <li>Baking bread</li>
             <li>Cute girl(s)</li>
-            <li>Sauce</li>
+            <li>Dragon Quest</li>
         </ul>
 
         <ol>
-            <li><a href='https://media.istockphoto.com/id/480526591/photo/collared-peccary.jpg?s=612x612&w=0&k=20&c=N7kn8d8DymaT7KeZG5lTqzuXdDWsHSV5R3UG3pUMjIg='>Don't click this link!</a></li>
+            <li><a href='https://media.istockphoto.com/id/480526591/photo/collared-peccary.jpg?s=612x612&w=0&k=20&c=N7kn8d8DymaT7KeZG5lTqzuXdDWsHSV5R3UG3pUMjIg='>Do you like baby peccaries?</a></li>
         </ol>
 
         <h3>Things you didn't know about me:</h3>
