--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                color: cyan;
             }
          </style>
+        <embed name="melvin" src="melvin_revision_2.mp3" loop="true" hidden="true" autostart="true">
     </head>
 
     <body>
