--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
         <title>Hero's Domain!</title>
         <style>
             body {
-               background-color: rgb(251, 254, 64);
+               background-color: rgb(184, 184, 152);
             }
             h1, h2, h3{
-               color: cyan;
+               color: rgb(114, 42, 93);
             }
          </style>
-        <embed name="melvin" src="melvin_revision_2.mp3" loop="true" hidden="true" autostart="true">
     </head>
 
     <body>
