--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
         <h3>Things you didn't know about me:</h3>
         <p>I can unicycle!</p>
+        <img src="answers-about-god.gif">
+        <br>
+        <p>Make sure to check back on this soon</p>
 
     </body>
 
