--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <h1>About me!</h1>
-        <p>Hi! My name is Mikey, and I'm a software engineering student!</p>
+        <p>Hi! I'm a software engineering student, and this is my page!</p>
         
         <h2>Some things I like:</h2>
 
