--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <ul>
             <li>Baking bread</li>
-            <li>Cute girl(s)</li>
+            <li>Space</li>
             <li>Dragon Quest</li>
         </ul>
 
@@ -30,10 +30,10 @@
         </ol>
 
         <h3>Things you didn't know about me:</h3>
-        <p>I can unicycle!</p>
+        <p>I enjoy skipping rocks.</p>
         <img src="answers-about-god.gif">
         <br>
-        <p>Make sure to check back on this soon</p>
+        <p>:)</p>
 
     </body>
 
